--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 
 <body>
-<h1>Erin Carlson2</h1>
+<h1>BIO</h1>
+<h2>Erin Carlson graduated from Cornell University in 2011 with a double major in English and Spanish. 
+<h1>WORK EXPERIENCE</h1>
 </body>
 </html>
