--- a/index.html
+++ b/index.html
@@ -3,12 +3,62 @@
 <head>
 
 	<title>Erin Carlson</title>
-	
+	<link href="css/stylesheet.css" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
-<h1>BIO</h1>
-<h2>Erin Carlson graduated from Cornell University in 2011 with a double major in English and Spanish. 
+<h1>ABOUT ME</h1>
+<h4>Erin graduated from Cornell University in 2011 with a double major in English and Spanish. Nowadays, her pursuits tend towards Technology, but her past work experience is an eclectic mix. She enjoys travelling, hiking, reading, and warm chocolate croissants.</h4>
+
 <h1>WORK EXPERIENCE</h1>
+<h2>BETA CONSULTANT | MicroStrategy, Inc.</h2>
+<ul>
+	<li>Work directly with CEO on a weekly basis to define the company vision and tackle strategic initiatives</li>
+	<li>Conduct week-long engagements on customer sites to test beta software and demo new features</li>
+	<li>Employee of the Quarter for Q1 2014 and winner of the 2013 Technology Showboat Award</li>
+	<li>Analyze internal customer satisfaction, triage internal issues, and release management data</li>
+</ul>
+
+<h2>TECHNOLOGY ASSOCIATE | MicroStrategy, Inc.</h2>
+	<h3>Associate Product Manager | Mobile Marketing Team</h3>
+	<ul>
+		<li>Wrote the first edition of The Platform Approach to Mobile Apps interactive iBook</li>
+		<li>Cowrote the revised Introduction to Mobile class for sales prospects and customers</li>
+		<li>Developed scripts, recorded voiceovers, and created screen captures for app walkthrough videos</li>
+	</ul>
+	<h3>Associate Product Quality Engineer | Analytical Engine Team</h3>
+	<ul>
+		<li>Tested iOS and Flash capabilities on early builds of the New Report Writing Engine</li>
+		<li>Developed advanced test suites for freeform feature testing, logging over 100 defects in 4 months</li>
+	</ul>
+	<h3>Technical Support Engineer | Desktop Team</h3>
+	<ul>
+		<li>Frequently the Client team's top case taker</li>
+		<li>Solved customer issues via call and email in a fast-paced environment</li>
+	</ul>
+
+<h2>Other Employment</h2>
+	<ul>
+		<li>Cornell University: International Students and Scholars Office; Office of the Vice Provost of Research; Empathy, Assistance, &amp Referral Service</li>
+		<li>City of Healdsburg: Department of Parks and Recreation; Healdsburg Pool</li>
+		<li>Metropolitan Transportation Commission: Department of Public Works at the City of Healdsburg</li> 
+	</ul>
+
+<h1>EDUCATION</h1>
+<h3>Cornell University | 3.75 (Magna Cum Laude)</h2>
+<h3>Healdsburg High School | 4.21</h2>
+<h3>Study Abroad | 9.5/19/A</h2>
+<ul>
+	<li>Universitat Pompeu Fabra | Barcelona, Spain</li>
+	<li>Pontificia Universidad Catolica del Peru | Lima, Peru</li>
+	<li>Oxford University | Oxford, United Kingdom</li>
+</ul>
+
+<h1>TRIVIAL PURSUITS</h1>
+<ul>
+	<li>CURRENT: In the process of trying to visit the capital of each of the 50 states (17 down)</li>
+	<li>COLLEGE: Won the Service Award from the Alpha Phi Omega community service fraternity for most hours of completed community service</li>
+	<li>HIGH SCHOOL: Nominated All League First Team in Basketball, Honorable Mention in Volleyball, and Best in Show at the Science Fair (assists from Courtney Carlson on 2/3 accomplishments)</li>
+</ul>
 </body>
 </html>
