--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 
 <h2>Other Employment</h2>
 	<ul>
-		<li>Cornell University: International Students and Scholars Office; Office of the Vice Provost of Research; Empathy, Assistance, &amp Referral Service</li>
-		<li>City of Healdsburg: Department of Parks and Recreation; Healdsburg Pool</li>
-		<li>Metropolitan Transportation Commission: Department of Public Works at the City of Healdsburg</li> 
+		<li><b>Cornell University:</b> International Students and Scholars Office; Office of the Vice Provost of Research; Empathy, Assistance, &amp Referral Service</li>
+		<li><b>City of Healdsburg:</b> Department of Parks and Recreation; Healdsburg Pool</li>
+		<li>Metropolitan Transportation Commission:</b> Department of Public Works at the City of Healdsburg</li> 
 	</ul>
 
 <h1>EDUCATION</h1>
@@ -56,9 +56,9 @@
 
 <h1>TRIVIAL PURSUITS</h1>
 <ul>
-	<li>CURRENT: In the process of trying to visit the capital of each of the 50 states (17 down)</li>
-	<li>COLLEGE: Won the Service Award from the Alpha Phi Omega community service fraternity for most hours of completed community service</li>
-	<li>HIGH SCHOOL: Nominated All League First Team in Basketball, Honorable Mention in Volleyball, and Best in Show at the Science Fair (assists from Courtney Carlson on 2/3 accomplishments)</li>
+	<li><b>Current:</b>b> In the process of trying to visit the capital of each of the 50 states (17 down)</li>
+	<li><b>College:</b> Won the Service Award from the Alpha Phi Omega community service fraternity for most hours of completed community service</li>
+	<li><b>High School:</b> Nominated All League First Team in Basketball, Honorable Mention in Volleyball, and Best in Show at the Science Fair (assists from Courtney Carlson on 2/3 accomplishments)</li>
 </ul>
 </body>
 </html>
