added image + css

--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 </head>
 
 <body>
-<h1>ABOUT ME</h1>
-<h4>Erin graduated from Cornell University in 2011 with a double major in English and Spanish. Nowadays, her pursuits tend towards Technology, but her past work experience is an eclectic mix. She enjoys travelling, hiking, reading, and warm chocolate croissants.</h4>
+<img src="css/images/erincarlson_cropped.jpg">
+<h4>Erin graduated magna cum laude from Cornell University in 2011 with a double major in English and Spanish, and promptly surprised everyone--particularly herself--by accepting a job in an engineering capacity at MicroStrategy. Since then, her interests have grown in a more technical direction, but her affection for travelling, hiking, reading, and warm chocolate croissants remains unchanged.</h4>
 
 <h1>WORK EXPERIENCE</h1>
 <h2>BETA CONSULTANT | MicroStrategy, Inc.</h2>
 <ul>
 	<li>Work directly with CEO on a weekly basis to define the company vision and tackle strategic initiatives</li>
-	<li>Conduct week-long engagements on customer sites to test beta software and demo new features</li>
 	<li>Employee of the Quarter for Q1 2014 and winner of the 2013 Technology Showboat Award</li>
+	<li>Conduct week-long engagements on customer sites to test beta software and demo new features</li>
 	<li>Analyze internal customer satisfaction, triage internal issues, and release management data</li>
 </ul>
 
@@ -31,7 +31,7 @@
 		<li>Tested iOS and Flash capabilities on early builds of the New Report Writing Engine</li>
 		<li>Developed advanced test suites for freeform feature testing, logging over 100 defects in 4 months</li>
 	</ul>
-	<h3>Technical Support Engineer | Desktop Team</h3>
+	<h3>Technical Support Engineer | Clients Team</h3>
 	<ul>
 		<li>Frequently the Client team's top case taker</li>
 		<li>Solved customer issues via call and email in a fast-paced environment</li>
@@ -39,9 +39,9 @@
 
 <h2>Other Employment</h2>
 	<ul>
-		<li><b>Cornell University:</b> International Students and Scholars Office; Office of the Vice Provost of Research; Empathy, Assistance, &amp Referral Service</li>
+		<li><b>Cornell University:</b> International Students and Scholars Office; Office of the Vice Provost for Research; Empathy, Assistance, &amp Referral Service</li>
 		<li><b>City of Healdsburg:</b> Department of Parks and Recreation; Healdsburg Pool</li>
-		<li>Metropolitan Transportation Commission:</b> Department of Public Works at the City of Healdsburg</li> 
+		<li><b>Metropolitan Transportation Commission:</b> Department of Public Works at the City of Healdsburg</li> 
 	</ul>
 
 <h1>EDUCATION</h1>
@@ -56,7 +56,7 @@
 
 <h1>TRIVIAL PURSUITS</h1>
 <ul>
-	<li><b>Current:</b>b> In the process of trying to visit the capital of each of the 50 states (17 down)</li>
+	<li><b>Current:</b> In the process of trying to visit the capital of each of the 50 states (17 down)</li>
 	<li><b>College:</b> Won the Service Award from the Alpha Phi Omega community service fraternity for most hours of completed community service</li>
 	<li><b>High School:</b> Nominated All League First Team in Basketball, Honorable Mention in Volleyball, and Best in Show at the Science Fair (assists from Courtney Carlson on 2/3 accomplishments)</li>
 </ul>
