UL behaving badly

--- a/index.html
+++ b/index.html
@@ -49,9 +49,6 @@
 	</ul>
 
 	<h3>Technical Support Engineer | Clients Team</h3>
-=======
-	<h3>Technical Support Engineer | Desktop Team</h3>
->>>>>>> Stashed changes
 	<ul>
 		<li>Frequently the Client team's top case taker</li>
 		<li>Solved customer issues via call and email in a fast-paced environment</li>
@@ -59,31 +56,20 @@
 
 <h2>Other Employment</h2>
 	<ul>
-
 		<li><b>Cornell University:</b> International Students and Scholars Office; Office of the Vice Provost for Research; Empathy, Assistance, &amp Referral Service</li>
 		<li><b>City of Healdsburg:</b> Department of Parks and Recreation; Healdsburg Pool</li>
 		<li><b>Metropolitan Transportation Commission:</b> Department of Public Works at the City of Healdsburg</li> 
 	</ul>
 
 <h1>EDUCATION</h1>
-<h3>Cornell University | 3.75 (Magna Cum Laude)</h2>
-<h3>Healdsburg High School | 4.21</h2>
-<h3>Study Abroad | 9.5/19/A</h2>
+<h2>Cornell University | 3.75 (Magna Cum Laude)</h2>
+<h3>Healdsburg High School | 4.21</h3>
+<h3>Study Abroad</h3>
+<ul>
 		<li>Cornell University: International Students and Scholars Office; Office of the Vice Provost of Research; Empathy, Assistance, &amp Referral Service</li>
 		<li>City of Healdsburg: Department of Parks and Recreation; Healdsburg Pool</li>
 		<li>Metropolitan Transportation Commission: Department of Public Works at the City of Healdsburg</li> 
 	</ul>
-
-<h1>EDUCATION</h1>
-<h2>Cornell University | 3.75 (Magna Cum Laude)</h2>
-<h3>Healdsburg High School | 4.21</h3>
-<h3>Study Abroad | High Honors</h3>
->>>>>>> Stashed changes
-<ul>
-	<li>Universitat Pompeu Fabra | Barcelona, Spain</li>
-	<li>Pontificia Universidad Catolica del Peru | Lima, Peru</li>
-	<li>Oxford University | Oxford, United Kingdom</li>
-</ul>
 
 <h1>TRIVIAL PURSUITS</h1>
 <ul>
