--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-	<title>Erin Carlson</title>
+	<title>Erin Kate Carlson</title>
 	<link href="css/stylesheet.css" rel="stylesheet" type="text/css"/>
 </head>
 
