fix study abroad

--- a/index.html
+++ b/index.html
@@ -66,15 +66,14 @@
 <h3>Healdsburg High School | 4.21</h3>
 <h3>Study Abroad</h3>
 <ul>
-		<li>Cornell University: International Students and Scholars Office; Office of the Vice Provost of Research; Empathy, Assistance, &amp Referral Service</li>
-		<li>City of Healdsburg: Department of Parks and Recreation; Healdsburg Pool</li>
-		<li>Metropolitan Transportation Commission: Department of Public Works at the City of Healdsburg</li> 
+		<li>Universitat Pompeu Fabra (Barcelona)</li>
+		<li>Pontificia Universidad Catolica del Peru (Lima)</li>
 	</ul>
 
 <h1>TRIVIAL PURSUITS</h1>
 <ul>
 	<li><b>Current:</b> In the process of trying to visit the capital of each of the 50 states (17 down)</li>
-	<li><b>College:</b> Won the Service Award from the Alpha Phi Omega community service fraternity for most hours of completed community service</li>
+	<li><b>College:</b> Won the Service Award from the Alpha Phi Omega community service fraternity for most hours of community service completed</li>
 	<li><b>High School:</b> Nominated All League First Team in Basketball, Honorable Mention in Volleyball, and Best in Show at the Science Fair (assists from Courtney Carlson on 2/3 accomplishments)</li>
 </ul>
 </body>
