--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
 
 <h1>WORK EXPERIENCE</h1>
 
-<h2>AREA PRODUCT OWNER, NEXT-GENERATION SOFTWARE | MicroStrategy, Inc.</h2>
+<h2>Area Product Owner, Next-Generation Software | MicroStrategy, Inc.</h2>
 <ul>
 	<li>Managed 6 product engineering and design teams during the company’s transition to Agile/Scrum methodology and Rally Software</li>
 	<li>Formulated the next-generation software business plan, product vision, and product architecture documentation</li>
 	<li>Member of the first-ever week-long Product Council event to elaborate the company vision with CXO stakeholders</li>
 </ul>
 
-<h2>TECHNICAL LIAISON TO THE CEO | MicroStrategy, Inc.</h2>
+<h2>Technical Liaison to the CEO | MicroStrategy, Inc.</h2>
 <ul>
 	<li>Coached CEO on the current and next-generation MicroStrategy Analytics Platform, administrative tools, and Amazon Web Services products</li>
 	<li>Facilitated 21 CEO-led initiatives involving the Technology, Product Management, Operations, and Product Marketing teams</li>
 	<li>Balanced the Beta Consultant customer-oriented, traveling role with mission-critical directives for executives</li>
 </ul>
 
-<h2>BETA CONSULTANT | MicroStrategy, Inc.</h2>
+<h2>Beta Consultant | MicroStrategy, Inc.</h2>
 <ul>
 	<li>Awarded Employee of the Quarter (Q1 2014) and the 2013 Showboat award for Best Demo in the company</li>
 	<li>Visited Fortune 500 companies to test beta software, demo new features, identify bugs</li>
@@ -39,10 +39,10 @@
 	<li>Simultaneously led operational reporting projects focused customer satisfaction, performance tuning, and issue tracking</li>
 </ul>
 
-<h2>TECHNOLOGY ASSOCIATE | MicroStrategy, Inc.</h2>
+<h2>Technology Associate | MicroStrategy, Inc.</h2>
 	<h3>Associate Product Manager | Mobile Marketing Team</h3>
 	<ul>
-		<li>Wrote the first edition of The Platform Approach to Mobile Apps interactive iBook</li>
+		<li>Wrote the first edition of <i>The Platform Approach to Mobile Apps</i> interactive iBook</li>
 		<li>Cowrote the revised Introduction to Mobile class for sales prospects and customers</li>
 		<li>Developed scripts, recorded voiceovers, and created screen captures for app walkthrough videos</li>
 	</ul>
@@ -66,7 +66,7 @@
 	</ul>
 
 <h1>EDUCATION</h1>
-<h2>Cornell University | 3.75 (Magna Cum Laude)</h2>
+<h3>Cornell University | 3.75 (Magna Cum Laude)</h3>
 <h3>Healdsburg High School | 4.21</h3>
 <h3>Study Abroad</h3>
 <ul>
