Hover Effect Complete!

--- a/index.html
+++ b/index.html
@@ -8,30 +8,31 @@
 
 <body>
 
+<div id="erinPic">
+	<div id="bioText">
+		Erin graduated magna cum laude from Cornell University in 2011 with a double major in English and Spanish, and promptly surprised everyone--particularly herself--by accepting a job in an engineering capacity at MicroStrategy. Since then, her interests have grown in a more technical direction, but her affection for traveling, hiking, reading, and warm chocolate croissants remains unchanged.
+	</div>
+</div>
 
-<img src="images/erincarlson_cropped.JPG" alt "picture">
+<div id="name">Erin Kate Carlson</div>
 
+<h1>WORK EXPERIENCE | MicroStrategy, Inc.</h1>
 
-<h1>Erin Kate Carlson</h1>
-<h4>Erin graduated magna cum laude from Cornell University in 2011 with a double major in English and Spanish, and promptly surprised everyone--particularly herself--by accepting a job in an engineering capacity at MicroStrategy. Since then, her interests have grown in a more technical direction, but her affection for travelling, hiking, reading, and warm chocolate croissants remains unchanged.</h4>
-
-<h1>WORK EXPERIENCE</h1>
-
-<h2>Area Product Owner, Next-Generation Software | MicroStrategy, Inc.</h2>
+<h2>Area Product Owner, Next-Generation Software</h2>
 <ul>
-	<li>Managed 6 product engineering and design teams during the company’s transition to Agile/Scrum methodology and Rally Software</li>
+	<li>Managed 6 product engineering and design teams during the company&#8217;s transition to Agile/Scrum methodology and Rally Software</li>
 	<li>Formulated the next-generation software business plan, product vision, and product architecture documentation</li>
 	<li>Member of the first-ever week-long Product Council event to elaborate the company vision with CXO stakeholders</li>
 </ul>
 
-<h2>Technical Liaison to the CEO | MicroStrategy, Inc.</h2>
+<h2>Technical Liaison to the CEO</h2>
 <ul>
 	<li>Coached CEO on the current and next-generation MicroStrategy Analytics Platform, administrative tools, and Amazon Web Services products</li>
 	<li>Facilitated 21 CEO-led initiatives involving the Technology, Product Management, Operations, and Product Marketing teams</li>
 	<li>Balanced the Beta Consultant customer-oriented, traveling role with mission-critical directives for executives</li>
 </ul>
 
-<h2>Beta Consultant | MicroStrategy, Inc.</h2>
+<h2>Beta Consultant</h2>
 <ul>
 	<li>Awarded Employee of the Quarter (Q1 2014) and the 2013 Showboat award for Best Demo in the company</li>
 	<li>Visited Fortune 500 companies to test beta software, demo new features, identify bugs</li>
@@ -39,7 +40,7 @@
 	<li>Simultaneously led operational reporting projects focused customer satisfaction, performance tuning, and issue tracking</li>
 </ul>
 
-<h2>Technology Associate | MicroStrategy, Inc.</h2>
+<h2>Technology Associate</h2>
 	<h3>Associate Product Manager | Mobile Marketing Team</h3>
 	<ul>
 		<li>Wrote the first edition of <i>The Platform Approach to Mobile Apps</i> interactive iBook</li>
