changes to padding and hover excess

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<li>Member of the first-ever week-long Product Council event to elaborate the company vision with CXO stakeholders</li>
 </ul>
 
-<h2>Technical Liaison to the CEO</h2>
+<h2>Technical Liaison to the CEO & Beta Consultant</h2>
 <ul>
 	<li>Coached CEO on the current and next-generation MicroStrategy Analytics Platform, administrative tools, and Amazon Web Services products</li>
 	<li>Facilitated 21 CEO-led initiatives involving the Technology, Product Management, Operations, and Product Marketing teams</li>
