--- a/index.html
+++ b/index.html
@@ -3,83 +3,139 @@
 <head>
 
 	<title>Erin Kate Carlson</title>
+	<link href="css/bootstrap.css" rel="stylesheet" type="text/css"/>
 	<link href="css/stylesheet.css" rel="stylesheet" type="text/css"/>
+	
 </head>
 
 <body>
 
-<div id="erinPic">
-	<div id="bioText">
-		Erin graduated magna cum laude from Cornell University in 2011 with a double major in English and Spanish, and promptly surprised everyone--particularly herself--by accepting a job in an engineering capacity at MicroStrategy. Since then, her interests have grown in a more technical direction, but her affection for traveling, hiking, reading, and warm chocolate croissants remains unchanged.
-	</div>
+<div class="container">
+
+<nav class="navbar navbar-fixed-top">
+		<div class="navbar-header">
+		
+		</div>
+</nav>
+
+<div id="jumbotron">
+	<div id="name">Erin Kate Carlson</div>
+		
 </div>
 
-<div id="name">Erin Kate Carlson</div>
+<h1>MicroStrategy, Inc.</h1>
 
-<h1>WORK EXPERIENCE | MicroStrategy, Inc.</h1>
+	<div class="container">
 
-<h2>Area Product Owner, Next-Generation Software</h2>
-<ul>
-	<li>Managed 6 product engineering and design teams during the company&#8217;s transition to Agile/Scrum methodology and Rally Software</li>
-	<li>Formulated the next-generation software business plan, product vision, and product architecture documentation</li>
-	<li>Member of the first-ever week-long Product Council event to elaborate the company vision with CXO stakeholders</li>
-</ul>
+			<div class="col-md-4">
 
-<h2>Technical Liaison to the CEO & Beta Consultant</h2>
-<ul>
-	<li>Coached CEO on the current and next-generation MicroStrategy Analytics Platform, administrative tools, and Amazon Web Services products</li>
-	<li>Facilitated 21 CEO-led initiatives involving the Technology, Product Management, Operations, and Product Marketing teams</li>
-	<li>Balanced the Beta Consultant customer-oriented, traveling role with mission-critical directives for executives</li>
-</ul>
+				<h2><b>Area Product Owner, Next-Generation Software</b></h2>
+					<ul>
+						<li>Managed 6 product engineering and design teams during the company&#8217;s transition to Agile/Scrum methodology and Rally Software</li>
+						<li>Formulated the next-generation software business plan, product vision, and product architecture documentation</li>
+						<li>Member of the first-ever week-long Product Council event to elaborate the company vision with CXO stakeholders</li>
+					</ul>
 
-<h2>Beta Consultant</h2>
-<ul>
-	<li>Awarded Employee of the Quarter (Q1 2014) and the 2013 Showboat award for Best Demo in the company</li>
-	<li>Visited Fortune 500 companies to test beta software, demo new features, identify bugs</li>
-	<li>Tested the latest software to identify defects, determine build stability, and create workshops for customers illustrating new features</li>
-	<li>Simultaneously led operational reporting projects focused customer satisfaction, performance tuning, and issue tracking</li>
-</ul>
+			</div>
 
-<h2>Technology Associate</h2>
-	<h3>Associate Product Manager | Mobile Marketing Team</h3>
-	<ul>
-		<li>Wrote the first edition of <i>The Platform Approach to Mobile Apps</i> interactive iBook</li>
-		<li>Cowrote the revised Introduction to Mobile class for sales prospects and customers</li>
-		<li>Developed scripts, recorded voiceovers, and created screen captures for app walkthrough videos</li>
-	</ul>
-	<h3>Associate Product Quality Engineer | Analytical Engine Team</h3>
-	<ul>
-		<li>Tested iOS and Flash capabilities on early builds of the New Report Writing Engine</li>
-		<li>Developed advanced test suites for freeform feature testing, logging over 100 defects in 4 months</li>
-	</ul>
+			<div class="col-md-4">
 
-	<h3>Technical Support Engineer | Clients Team</h3>
-	<ul>
-		<li>Frequently the Client team's top case taker</li>
-		<li>Solved customer issues via call and email in a fast-paced environment</li>
-	</ul>
+				<h2><b>Technical Liaison to the CEO &amp Beta Consultant</b></h2>
+					<ul>
+						<li>Coached CEO on the current and next-generation MicroStrategy Analytics Platform, administrative tools, and Amazon Web Services products</li>
+						<li>Facilitated 21 CEO-led initiatives involving the Technology, Product Management, Operations, and Product Marketing teams</li>
+						<li>Balanced the Beta Consultant customer-oriented, traveling role with mission-critical directives for executives</li>
+					</ul>
 
-<h2>Other Employment</h2>
-	<ul>
-		<li><b>Cornell University:</b> International Students and Scholars Office; Office of the Vice Provost for Research; Empathy, Assistance, &amp Referral Service</li>
-		<li><b>City of Healdsburg:</b> Department of Parks and Recreation; Healdsburg Pool</li>
-		<li><b>Metropolitan Transportation Commission:</b> Department of Public Works at the City of Healdsburg</li> 
-	</ul>
+			</div>
+
+			<div class="col-md-4">
+
+				<h2><b>Beta Consultant</b></h2>
+					<ul>
+						<li>Awarded Employee of the Quarter (Q1 2014) and the 2013 Showboat award for Best Demo in the company</li>
+						<li>Visited Fortune 500 companies to test beta software, demo new features, identify bugs</li>
+						<li>Tested the latest software to identify defects, determine build stability, and create workshops for customers illustrating new features</li>
+						<li>Simultaneously led operational reporting projects focused customer satisfaction, performance tuning, and issue tracking</li>
+					</ul>
+
+			</div>
+
+	</div>
+
+<div class="container">
+<h1>Technology Associate</h1>
+
+	<div id="erinPic">
+		<div id="bioText">
+			Erin graduated magna cum laude from Cornell University in 2011 with a double major in English and Spanish, and promptly surprised everyone--particularly herself--by accepting a job in an engineering capacity at MicroStrategy. Since then, her interests have grown in a more technical direction, but her affection for traveling, hiking, reading, and warm chocolate croissants remains unchanged.
+		</div>
+	</div>
+
+	
+
+
+				<h2><b>Associate Product Manager</b> | Mobile Marketing Team</h2>
+					<p>In addition to writing the first edition of <i>The Platform Approach to Mobile Apps</i> interactive iBook and creating the new <i>Introduction to Mobile</i> class for sales prospects and existing customers, I developed scripts, recorded voiceovers, and created app walkthrough videos.</p>
+
+				<h2><b>Associate Product Quality Engineer</b> | Analytical Engine Team</h2>
+					<p>While my main focus was testing the iOS and Flash capabilities on early builds of the new Report-Writing Engine and SmartClient technology, I also developed advanced test suites for freeform feature testing, logging over 100 defects in 4 months.</p>
+
+				<h2><b>Technical Support Engineer</b> | Clients Team</h2>
+					<p>Solved mission-critical customer issues via call and email in a fast-paced environment, frequently recognized as the team's top case taker.</p>
+
+				<h2>Other Employment</h2>
+			
+				<p><b>Cornell University:</b> International Students and Scholars Office; Office of the Vice Provost for Research; Empathy, Assistance, &amp Referral Service</p>
+				<p><b>City of Healdsburg:</b> Department of Parks and Recreation; Healdsburg Pool</p>
+				<p><b>Metropolitan Transportation Commission:</b> Department of Public Works at the City of Healdsburg</p> 
+
+</div>
+
+<div class="container">
 
 <h1>EDUCATION</h1>
-<h3>Cornell University | 3.75 (Magna Cum Laude)</h3>
-<h3>Healdsburg High School | 4.21</h3>
-<h3>Study Abroad</h3>
-<ul>
-		<li>Universitat Pompeu Fabra (Barcelona)</li>
-		<li>Pontificia Universidad Catolica del Peru (Lima)</li>
-	</ul>
 
-<h1>TRIVIAL PURSUITS</h1>
-<ul>
-	<li><b>Current:</b> In the process of trying to visit the capital of each of the 50 states (17 down)</li>
-	<li><b>College:</b> Won the Service Award from the Alpha Phi Omega community service fraternity for most hours of community service completed</li>
-	<li><b>High School:</b> Nominated All League First Team in Basketball, Honorable Mention in Volleyball, and Best in Show at the Science Fair (assists from Courtney Carlson on 2/3 accomplishments)</li>
-</ul>
+
+		<div class="col-md-4">
+			<div class="image">
+				<img src="cornell.png">
+			</div>
+
+			<div class="text">
+				<h3><b>Cornell University</b></h3>
+				<p>Magna Cum Laude | 3.75</p>
+				<p>Completed an honors thesis for the English department; Awarded Alpha Phi Omega's Service Award for most hours of community service completed</p>
+			</div>
+		</div>
+
+		<div class="col-md-4">
+			<div class="image">
+				<img src="HHS.gif">
+			</div>
+		
+
+			<div class="text">
+				<h3><b>Healdsburg High School</b></h3>
+				<p>Graduated first in class | 4.21</p>
+				<p>Nominated All League First Team in Basketball, Honorable Mention in Volleyball, and Best in Show at the Healdsburg Science Fair</p>
+
+			</div>
+		</div>
+		<div class="col-md-4">
+			<div class="image">
+				<img src="HHS.gif">
+			</div>
+
+			<div class="text">
+				<h3><b>Study Abroad</b></h3>
+				<p>Universitat Pompeu Fabra | 9.5/10</p>
+				<p>Pontificia Universidad Catolica del Peru | 19/20</p>
+				<p>Oxford University | A</p>
+			</div>			
+		</div>
+</div>
+
+</div>
 </body>
 </html>
