--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 		</div>
 		<div class="col-md-4">
 			<div class="image">
-				<img src="HHS.gif">
+				<img src="UPF.jpeg">
 			</div>
 
 			<div class="text">
