--- a/index.html
+++ b/index.html
@@ -10,20 +10,17 @@
 
 <body>
 
-<div class="container">
 
-<nav class="navbar navbar-fixed-top">
-		<div class="navbar-header">
-		
+<div class="jumbotron">
+	<h1>Erin Kate Carlson</h1>
+		<div id="bio">
+			<p>Erin graduated magna cum laude from Cornell University in 2011 with a double major in English and Spanish, and promptly surprised everyone--particularly herself--by accepting a job in an engineering capacity at MicroStrategy. Since then, her interests have grown in a more technical direction, but her affection for traveling, hiking, reading, and warm chocolate croissants remains unchanged.</p>
 		</div>
-</nav>
-
-<div id="jumbotron">
-	<div id="name">Erin Kate Carlson</div>
 		
 </div>
 
-<h1>MicroStrategy, Inc.</h1>
+
+
 
 	<div class="container">
 
@@ -53,7 +50,7 @@
 
 				<h2><b>Beta Consultant</b></h2>
 					<ul>
-						<li>Awarded Employee of the Quarter (Q1 2014) and the 2013 Showboat award for Best Demo in the company</li>
+						<li>Awarded Employee of the Quarter (Q1 2014) and the 2013 Showboat Award for Best Demo in the company</li>
 						<li>Visited Fortune 500 companies to test beta software, demo new features, identify bugs</li>
 						<li>Tested the latest software to identify defects, determine build stability, and create workshops for customers illustrating new features</li>
 						<li>Simultaneously led operational reporting projects focused customer satisfaction, performance tuning, and issue tracking</li>
@@ -63,18 +60,16 @@
 
 	</div>
 
-<div class="container">
-<h1>Technology Associate</h1>
 
-	<div id="erinPic">
-		<div id="bioText">
-			Erin graduated magna cum laude from Cornell University in 2011 with a double major in English and Spanish, and promptly surprised everyone--particularly herself--by accepting a job in an engineering capacity at MicroStrategy. Since then, her interests have grown in a more technical direction, but her affection for traveling, hiking, reading, and warm chocolate croissants remains unchanged.
+<div class="jumbotron">
+	<h1>Technology Associate</h1>
+</div>
+
+	<div class="container">
+		<div class="techAssociate">
+			<img src="images/erincarlson_cropped.JPG">
 		</div>
-	</div>
-
-	
-
-
+		<div class="techAssociate2">
 				<h2><b>Associate Product Manager</b> | Mobile Marketing Team</h2>
 					<p>In addition to writing the first edition of <i>The Platform Approach to Mobile Apps</i> interactive iBook and creating the new <i>Introduction to Mobile</i> class for sales prospects and existing customers, I developed scripts, recorded voiceovers, and created app walkthrough videos.</p>
 
@@ -84,17 +79,20 @@
 				<h2><b>Technical Support Engineer</b> | Clients Team</h2>
 					<p>Solved mission-critical customer issues via call and email in a fast-paced environment, frequently recognized as the team's top case taker.</p>
 
-				<h2>Other Employment</h2>
+				<h2><b>Other Employment</b></h2>
 			
 				<p><b>Cornell University:</b> International Students and Scholars Office; Office of the Vice Provost for Research; Empathy, Assistance, &amp Referral Service</p>
 				<p><b>City of Healdsburg:</b> Department of Parks and Recreation; Healdsburg Pool</p>
 				<p><b>Metropolitan Transportation Commission:</b> Department of Public Works at the City of Healdsburg</p> 
+		</div>
+</div>
 
+
+<div class="jumbotron">
+	<h1>Education</h1>
 </div>
 
 <div class="container">
-
-<h1>EDUCATION</h1>
 
 
 		<div class="col-md-4">
