--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
 
 <div class="jumbotron">
-	<h1>Erin Kate Carlson</h1>
+	<div id="name">
+		<h1>Erin Kate Carlson</h1>
+	</div>
 		<div id="bio">
 			<p>Erin graduated magna cum laude from Cornell University in 2011 with a double major in English and Spanish, and promptly surprised everyone--particularly herself--by accepting a job in an engineering capacity at MicroStrategy. Since then, her interests have grown in a more technical direction, but her affection for traveling, hiking, reading, and warm chocolate croissants remains unchanged.</p>
 		</div>
