--- a/index.html
+++ b/index.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
 <html>
-<head>
+	<head>
 
-	<title>Erin Kate Carlson</title>
-	<link href="css/bootstrap.css" rel="stylesheet" type="text/css"/>
-	<link href="css/stylesheet.css" rel="stylesheet" type="text/css"/>
+		<title>Erin Kate Carlson</title>
+		<link href="css/bootstrap.css" rel="stylesheet" type="text/css"/>
+		<link href="css/stylesheet.css" rel="stylesheet" type="text/css"/>
 	
-</head>
+	</head>
 
 <body>
 
 
-<div class="jumbotron">
-	<div id="name">
-		<h1>Erin Kate Carlson</h1>
-	</div>
-		<div id="bio">
-			<p>Erin graduated magna cum laude from Cornell University in 2011 with a double major in English and Spanish, and promptly surprised everyone--particularly herself--by accepting a job in an engineering capacity at MicroStrategy. Since then, her interests have grown in a more technical direction, but her affection for traveling, hiking, reading, and warm chocolate croissants remains unchanged.</p>
+	<div class="jumbotron">
+		<div id="name">
+			<h1>Erin Kate Carlson</h1>
 		</div>
+			<div id="bio">
+				<p>Erin graduated magna cum laude from Cornell University in 2011 with a double major in English and Spanish, and promptly surprised everyone--particularly herself--by accepting a job in an engineering capacity at MicroStrategy. Since then, her interests have grown in a more technical direction, but her affection for traveling, hiking, reading, and warm chocolate croissants remains unchanged.</p>
+			</div>
 		
-</div>
-
-
+	</div>
 
 
 	<div class="container">
@@ -63,79 +61,78 @@
 	</div>
 
 
-<div class="jumbotron">
-	<h1>Technology Associate</h1>
-</div>
+	<div class="jumbotron">
+		<h1>Technology Associate</h1>
+	</div>
 
 	<div class="container">
 		<div class="techAssociate">
-			<img src="images/erincarlson_cropped.JPG">
+			<img id="mainpic" src="images/erincarlson_cropped.JPG">
 		</div>
+
 		<div class="techAssociate2">
-				<h2><b>Associate Product Manager</b> | Mobile Marketing Team</h2>
-					<p>In addition to writing the first edition of <i>The Platform Approach to Mobile Apps</i> interactive iBook and creating the new <i>Introduction to Mobile</i> class for sales prospects and existing customers, I developed scripts, recorded voiceovers, and created app walkthrough videos.</p>
+			<h2><b>Associate Product Manager</b> | Mobile Marketing Team</h2>
+				<p>In addition to writing the first edition of <i>The Platform Approach to Mobile Apps</i> interactive iBook and creating the new <i>Introduction to Mobile</i> class for sales prospects and existing customers, I developed scripts, recorded voiceovers, and created app walkthrough videos.</p>
 
-				<h2><b>Associate Product Quality Engineer</b> | Analytical Engine Team</h2>
-					<p>While my main focus was testing the iOS and Flash capabilities on early builds of the new Report-Writing Engine and SmartClient technology, I also developed advanced test suites for freeform feature testing, logging over 100 defects in 4 months.</p>
+			<h2><b>Associate Product Quality Engineer</b> | Analytical Engine Team</h2>
+				<p>While my main focus was testing the iOS and Flash capabilities on early builds of the new Report-Writing Engine and SmartClient technology, I also developed advanced test suites for freeform feature testing, logging over 100 defects in 4 months.</p>
 
-				<h2><b>Technical Support Engineer</b> | Clients Team</h2>
-					<p>Solved mission-critical customer issues via call and email in a fast-paced environment, frequently recognized as the team's top case taker.</p>
+			<h2><b>Technical Support Engineer</b> | Clients Team</h2>
+				<p>Solved mission-critical customer issues via call and email in a fast-paced environment, frequently recognized as the team's top case taker.</p>
 
-				<h2><b>Other Employment</b></h2>
+			<h2><b>Other Employment</b></h2>
 			
-				<p><b>Cornell University:</b> International Students and Scholars Office; Office of the Vice Provost for Research; Empathy, Assistance, &amp Referral Service</p>
-				<p><b>City of Healdsburg:</b> Department of Parks and Recreation; Healdsburg Pool</p>
-				<p><b>Metropolitan Transportation Commission:</b> Department of Public Works at the City of Healdsburg</p> 
+			<p><b>Cornell University:</b> International Students and Scholars Office; Office of the Vice Provost for Research; Empathy, Assistance, &amp Referral Service</p>
+			<p><b>City of Healdsburg:</b> Department of Parks and Recreation; Healdsburg Pool</p>
+			<p><b>Metropolitan Transportation Commission:</b> Department of Public Works at the City of Healdsburg</p> 
 		</div>
-</div>
+	</div>
 
 
-<div class="jumbotron">
-	<h1>Education</h1>
-</div>
+	<div class="jumbotron">
+		<h1>Education</h1>
+	</div>
 
-<div class="container">
-
+	<div class="container">
 
 		<div class="col-md-4">
-			<div class="image">
+			<div class="imgcenter">
 				<img src="cornell.png">
 			</div>
 
 			<div class="text">
 				<h3><b>Cornell University</b></h3>
-				<p>Magna Cum Laude | 3.75</p>
-				<p>Completed an honors thesis for the English department; Awarded Alpha Phi Omega's Service Award for most hours of community service completed</p>
+					<p>Magna Cum Laude | 3.75</p>
+					<p>Completed an honors thesis for the English department; Awarded Alpha Phi Omega's Service Award for most hours of community service completed</p>
 			</div>
 		</div>
 
 		<div class="col-md-4">
-			<div class="image">
-				<img src="HHS.GIF">
-			</div>
-		
-
-			<div class="text">
-				<h3><b>Healdsburg High School</b></h3>
-				<p>Graduated first in class | 4.21</p>
-				<p>Nominated All League First Team in Basketball, Honorable Mention in Volleyball, and Best in Show at the Healdsburg Science Fair</p>
-
-			</div>
-		</div>
-		<div class="col-md-4">
-			<div class="image">
+			<div class="imgcenter">
 				<img src="UPF.jpeg">
 			</div>
 
 			<div class="text">
 				<h3><b>Study Abroad</b></h3>
-				<p>Universitat Pompeu Fabra | 9.5/10</p>
-				<p>Pontificia Universidad Catolica del Peru | 19/20</p>
-				<p>Oxford University | A</p>
+					<p>Universitat Pompeu Fabra | 9.5/10</p>
+					<p>Pontificia Universidad Catolica del Peru | 19/20</p>
+					<p>Oxford University | A</p>
 			</div>			
 		</div>
-</div>
 
-</div>
+		<div class="col-md-4">
+			<div class="imgcenter">
+				<img src="HHS.GIF">
+			</div>
+
+			<div class="text">
+				<h3><b>Healdsburg High School</b></h3>
+					<p>Graduated first in class | 4.21</p>
+					<p>Nominated All League First Team in Basketball, Honorable Mention in Volleyball, and Best in Show at the Healdsburg Science Fair</p>
+			</div>
+		</div>
+		
+	</div>
+
 </body>
 </html>
