--- a/index.html
+++ b/index.html
@@ -79,12 +79,16 @@
 
 			<h2><b>Technical Support Engineer</b> | Clients Team</h2>
 				<p>Solved mission-critical customer issues via call and email in a fast-paced environment, frequently recognized as the team's top case taker.</p>
-
-			<h2><b>Other Employment</b></h2>
 			
-			<p><b>Cornell University:</b> International Students and Scholars Office; Office of the Vice Provost for Research; Empathy, Assistance, &amp Referral Service</p>
-			<p><b>City of Healdsburg:</b> Department of Parks and Recreation; Healdsburg Pool</p>
-			<p><b>Metropolitan Transportation Commission:</b> Department of Public Works at the City of Healdsburg</p> 
+			<p><h3><b>Cornell University</b></h3></p>
+				<p>International Students and Scholars Office</p>
+				<p>Office of the Vice Provost for Research</p>
+				<p>Empathy, Assistance, &amp Referral Service</p>
+			<p><h3><b>City of Healdsburg</b></h3></p>
+				<p>Department of Parks and Recreation</p>
+				<p>Healdsburg Pool</p>
+			<p><h3><b>Metropolitan Transportation Commission</b></h3></p>
+				<p>Department of Public Works at the City of Healdsburg</p>
 		</div>
 	</div>
 
