--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 
 <body>
 
+<!--<div class="menuBar"
+	<div class="buttons">
+	
+		<button type="nowButton" class="btn btn-info">NOW</button>
+		<button type="beforeButton" class="btn btn-info">BEFORE</button>
+		<button type="historyButton" class="btn btn-info">HISTORY</button>
+
+	</div>
+</div>
+-->
 
 	<div class="jumbotron">
 		<div id="name">
@@ -61,6 +71,39 @@
 	</div>
 
 
+<div class="jumbotron">
+		<h1>Technology Associate</h1>
+</div>
+	<div class="container">
+
+		<div class="col-md-7">
+			<img id="mainpic" src="images/erincarlson_cropped.JPG">
+		</div>
+
+		<div class="col-md-5">
+			<h2><b>Associate Product Manager</b> | Mobile Marketing Team</h2>
+				<p>In addition to writing the first edition of <i>The Platform Approach to Mobile Apps</i> interactive iBook and creating the new <i>Introduction to Mobile</i> class for sales prospects and existing customers, I developed scripts, recorded voiceovers, and created app walkthrough videos.</p>
+
+			<h2><b>Associate Product Quality Engineer</b> | Analytical Engine Team</h2>
+				<p>While my main focus was testing the iOS and Flash capabilities on early builds of the new Report-Writing Engine and SmartClient technology, I also developed advanced test suites for freeform feature testing, logging over 100 defects in 4 months.</p>
+
+			<h2><b>Technical Support Engineer</b> | Clients Team</h2>
+				<p>Solved mission-critical customer issues via call and email in a fast-paced environment, frequently recognized as the team's top case taker.</p>
+			
+			<p><h3><b>Cornell University</b></h3></p>
+				<p>International Students and Scholars Office</p>
+				<p>Office of the Vice Provost for Research</p>
+				<p>Empathy, Assistance, &amp Referral Service</p>
+			<p><h3><b>City of Healdsburg</b></h3></p>
+				<p>Department of Parks and Recreation</p>
+				<p>Healdsburg Pool</p>
+			<p><h3><b>Metropolitan Transportation Commission</b></h3></p>
+				<p>Department of Public Works at the City of Healdsburg</p>		
+		</div>
+	</div>
+
+<!--
+
 	<div class="jumbotron">
 		<h1>Technology Associate</h1>
 	</div>
@@ -91,6 +134,7 @@
 				<p>Department of Public Works at the City of Healdsburg</p>
 		</div>
 	</div>
+-->
 
 
 	<div class="jumbotron">
