--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
 
 
 	<div class="container">
+			<div class="col-md-4">
+
+				<h2><b>Director &amp Area Product Owner | Analytics, Security, &amp Mobility Tools</b></h2>
+					<ul>
+						<li>Managed 6 product engineering and design teams during the company&#8217;s transition to Agile/Scrum methodology and Rally Software</li>
+						<li>Formulated the next-generation software business plan, product vision, and product architecture documentation</li>
+						<li>Member of the first-ever week-long Product Council event to elaborate the company vision with CXO stakeholders</li>
+					</ul>
+
+			</div>
 
 			<div class="col-md-4">
 
@@ -56,17 +66,7 @@
 
 			</div>
 
-			<div class="col-md-4">
-
-				<h2><b>Beta Consultant</b></h2>
-					<ul>
-						<li>Awarded Employee of the Quarter (Q1 2014) and the 2013 Showboat Award for Best Demo in the company</li>
-						<li>Visited Fortune 500 companies to test beta software, demo new features, identify bugs</li>
-						<li>Tested the latest software to identify defects, determine build stability, and create workshops for customers illustrating new features</li>
-						<li>Simultaneously led operational reporting projects focused customer satisfaction, performance tuning, and issue tracking</li>
-					</ul>
-
-			</div>
+			
 
 	</div>
 
@@ -79,15 +79,26 @@
 		<div class="col-md-7">
 			<img id="mainpic" src="images/erincarlson_cropped.JPG">
 		</div>
-
+		
 		<div class="col-md-5">
-			<h2><b>Associate Product Manager</b> | Mobile Marketing Team</h2>
+
+				<h2><b>Beta Consultant</b></h2>
+					<ul>
+						<li>Awarded Employee of the Quarter (Q1 2014) and the 2013 Showboat Award for Best Demo in the company</li>
+						<li>Visited Fortune 500 companies to test beta software, demo new features, identify bugs</li>
+						<li>Tested the latest software to identify defects, determine build stability, and create workshops for customers illustrating new features</li>
+						<li>Simultaneously led operational reporting projects focused customer satisfaction, performance tuning, and issue tracking</li>
+					</ul>
+
+			</div>
+		<div class="col-md-5">
+			<h2><b>Associate Product Manager</b> | Mobile Marketing</h2>
 				<p>In addition to writing the first edition of <i>The Platform Approach to Mobile Apps</i> interactive iBook and creating the new <i>Introduction to Mobile</i> class for sales prospects and existing customers, I developed scripts, recorded voiceovers, and created app walkthrough videos.</p>
 
-			<h2><b>Associate Product Quality Engineer</b> | Analytical Engine Team</h2>
+			<h2><b>Associate Product Quality Engineer</b> | Analytical Engine</h2>
 				<p>While my main focus was testing the iOS and Flash capabilities on early builds of the new Report-Writing Engine and SmartClient technology, I also developed advanced test suites for freeform feature testing, logging over 100 defects in 4 months.</p>
 
-			<h2><b>Technical Support Engineer</b> | Clients Team</h2>
+			<h2><b>Technical Support Engineer</b> | Client Experience</h2>
 				<p>Solved mission-critical customer issues via call and email in a fast-paced environment, frequently recognized as the team's top case taker.</p>
 			
 			<p><h3><b>Cornell University</b></h3></p>
