--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 
 				<h2><b>Director &amp Area Product Owner | Analytics, Security, &amp Mobility Tools</b></h2>
 					<ul>
-						<li>Managed 6 product engineering and design teams during the company&#8217;s transition to Agile/Scrum methodology and Rally Software</li>
-						<li>Formulated the next-generation software business plan, product vision, and product architecture documentation</li>
-						<li>Member of the first-ever week-long Product Council event to elaborate the company vision with CXO stakeholders</li>
+						<li>Collaborate daily with the CEO, CTO, and key stakeholders to define and drive next-generation product strategy, roadmap, designs, and prototypes</li>
+						<li>Lead cross-functional innovation team of Product Managers, engineers, and UI/UX designers</li>
+						<li>Created a working next-generation data analytics platform prototype in under a month</li>
 					</ul>
 
 			</div>
@@ -48,8 +48,8 @@
 
 				<h2><b>Area Product Owner, Next-Generation Software</b></h2>
 					<ul>
-						<li>Managed 6 product engineering and design teams during the company&#8217;s transition to Agile/Scrum methodology and Rally Software</li>
-						<li>Formulated the next-generation software business plan, product vision, and product architecture documentation</li>
+						<li>Managed six product engineering and design teams (30 total reports) during the company’s transition to Agile/Scrum methodologies and Rally Software</li>
+						<li>Owned the product backlog, refined user stories, conducted iteration planning and other Scrum ceremonies</li>
 						<li>Member of the first-ever week-long Product Council event to elaborate the company vision with CXO stakeholders</li>
 					</ul>
 
@@ -81,17 +81,11 @@
 		</div>
 		
 		<div class="col-md-5">
+			<h2><b>Beta Consultant</b> | Beta Software</h2>
+				<p>Visited Fortune 500 companies to test beta software and demo new features, gathered customer feedback and reported back to stakeholders, and simultaneously led internal operational reporting projects focused customer satisfaction, performance tuning, and issue tracking.</p>
 
-				<h2><b>Beta Consultant</b></h2>
-					<ul>
-						<li>Awarded Employee of the Quarter (Q1 2014) and the 2013 Showboat Award for Best Demo in the company</li>
-						<li>Visited Fortune 500 companies to test beta software, demo new features, identify bugs</li>
-						<li>Tested the latest software to identify defects, determine build stability, and create workshops for customers illustrating new features</li>
-						<li>Simultaneously led operational reporting projects focused customer satisfaction, performance tuning, and issue tracking</li>
-					</ul>
+				In addition to writing the first edition of <i>The Platform Approach to Mobile Apps</i> interactive iBook and creating the new <i>Introduction to Mobile</i> class for sales prospects and existing customers, I developed scripts, recorded voiceovers, and created app walkthrough videos.</p>
 
-			</div>
-		<div class="col-md-5">
 			<h2><b>Associate Product Manager</b> | Mobile Marketing</h2>
 				<p>In addition to writing the first edition of <i>The Platform Approach to Mobile Apps</i> interactive iBook and creating the new <i>Introduction to Mobile</i> class for sales prospects and existing customers, I developed scripts, recorded voiceovers, and created app walkthrough videos.</p>
 
