change list type

--- a/index.html
+++ b/index.html
@@ -94,14 +94,20 @@
 				<p>Solved mission-critical customer issues via call and email in a fast-paced environment, frequently recognized as the team's top case taker.</p>
 			
 			<p><h3><b>Cornell University</b></h3></p>
-				<p>International Students and Scholars Office</p>
-				<p>Office of the Vice Provost for Research</p>
-				<p>Empathy, Assistance, &amp Referral Service</p>
+				<ul>
+					<li>International Students and Scholars Office</li>
+					<li>Office of the Vice Provost for Research</li>
+					<li>Empathy, Assistance, &amp Referral Service</li>
+				</ul>
 			<p><h3><b>City of Healdsburg</b></h3></p>
-				<p>Department of Parks and Recreation</p>
-				<p>Healdsburg Pool</p>
+				<ul>
+					<li>Department of Parks and Recreation</li>
+					<li>Healdsburg Pool</li>
+				</ul>
 			<p><h3><b>Metropolitan Transportation Commission</b></h3></p>
-				<p>Department of Public Works at the City of Healdsburg</p>		
+				<ul>
+					<p>Department of Public Works at the City of Healdsburg</p>
+				</ul>		
 		</div>
 	</div>
 
