--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 			<div class="col-md-4">
 
-				<h2><b>Area Product Owner, Next-Generation Software</b></h2>
+				<h2><b>Area Product Owner | Next-Generation Software</b></h2>
 					<ul>
 						<li>Managed six product engineering and design teams (30 total reports) during the company’s transition to Agile/Scrum methodologies and Rally Software</li>
 						<li>Owned the product backlog, refined user stories, conducted iteration planning and other Scrum ceremonies</li>
@@ -59,8 +59,7 @@
 
 				<h2><b>Technical Liaison to the CEO &amp Beta Consultant</b></h2>
 					<ul>
-						<li>Coached CEO on the current and next-generation MicroStrategy Analytics Platform, administrative tools, and Amazon Web Services products</li>
-						<li>Facilitated 21 CEO-led initiatives involving the Technology, Product Management, Operations, and Product Marketing teams</li>
+						<li>Facilitated 21 CEO-led initiatives involving the Technology, Product Management, Operations, and Product Marketing teams</li><li>Coached CEO on the current and next-generation MicroStrategy Analytics Platform, administrative tools, and Amazon Web Services products</li>
 						<li>Balanced the Beta Consultant customer-oriented, traveling role with mission-critical directives for executives</li>
 					</ul>
 
