--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 		</div>
 		
 		<div class="col-md-5">
-			<h2><b>Beta Consultant</b> | Beta Software</h2>
+			<h2><b>Beta Consultant</b> | Beta Software Team</h2>
 				<p>Visited Fortune 500 companies to test beta software and demo new features, gathered customer feedback and reported back to stakeholders, and simultaneously led internal operational reporting projects focused customer satisfaction, performance tuning, and issue tracking.</p>
 
 			<h2><b>Associate Product Manager</b> | Mobile Marketing</h2>
