--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 				<h2><b>Area Product Owner | Next-Generation Software</b></h2>
 					<ul>
-						<li>Managed six product engineering and design teams (30 total reports) during the company’s transition to Agile/Scrum methodologies and Rally Software</li>
+						<li>Managed six product engineering and design teams (30 total reports) during the company&#8217s transition to Agile/Scrum methodologies and Rally Software</li>
 						<li>Owned the product backlog, refined user stories, conducted iteration planning and other Scrum ceremonies</li>
 						<li>Member of the first-ever week-long Product Council event to elaborate the company vision with CXO stakeholders</li>
 					</ul>
