--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 <div class="techAss">
 		<h1>Technology Associate</h1>
 </div>
+
 	<div class="container">
 
 		<div class="col-md-7">
@@ -115,7 +116,7 @@
 
 		<div class="col-md-4">
 			<div class="imgcenter">
-				<img src="images/cornell.png">
+				<img id="cornell" src="images/cornell.png">
 			</div>
 
 			<div class="text">
@@ -127,7 +128,7 @@
 
 		<div class="col-md-4">
 			<div class="imgcenter">
-				<img src="images/UPF.jpeg">
+				<img id="upf" src="images/UPF.jpeg">
 			</div>
 
 			<div class="text">
@@ -140,7 +141,7 @@
 
 		<div class="col-md-4">
 			<div class="imgcenter">
-				<img src="images/HHS.GIF">
+				<img id="hhs" src="images/HHS.GIF">
 			</div>
 
 			<div class="text">
