fix bullet point

--- a/pages/work.html
+++ b/pages/work.html
@@ -21,9 +21,6 @@
 	</div>
 
 
-	<div class="jumbotron">
-		
-	</div>
 			
 	<div class="container">
 
@@ -100,7 +97,7 @@
 				</ul>
 			<p><h3><b>Metropolitan Transportation Commission</b></h3></p>
 				<ul>
-					<p>Department of Public Works at the City of Healdsburg</p>
+					<li>Department of Public Works at the City of Healdsburg</li>
 				</ul>		
 		</div>
 	</div>
