portfolio section added

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 			<p class="navbar-text">Erin Carlson</p>
 			<p class="navbar-text"><a href="pages/work.html">Work</a></p>
 			<p class="navbar-text"><a href="pages/school.html">School</a></p>
+			<p class="navbar-text"><a href="pages/portfolio.html">Portfolio</a></p>
 		</div>
 	</div>
 
