--- a/pages/school.html
+++ b/pages/school.html
@@ -16,6 +16,8 @@
 			<p class="navbar-text"><a href="../index.html">Erin Carlson</a></p>
 			<p class="navbar-text"><a href="work.html">Work</a></p>
 			<p class="navbar-text">School</p>
+			<p class="navbar-text"><a href="portfolio.html">Portfolio</a></p>
+			
 		</div>
 	</div>
 
