--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -25,8 +25,8 @@
 
 		<div class="col-md-12">
 			<div class="imgcenter">
-				<img src="../images/cornell.png">
-				<p>Underconstruction</p>
+				<img src="../images/balchhall.jpg">
+				<h2>Under Construction</h2>
 			</div>
 		</div>
 	</div>		
