fix navigation bar in school

--- a/pages/work.html
+++ b/pages/work.html
@@ -17,6 +17,7 @@
 			<p class="navbar-text"><a href="../index.html">Erin Carlson</a></p>
 			<p class="navbar-text">Work</p>
 			<p class="navbar-text"><a href="school.html">School</a></p>
+			<p class="navbar-text"><a href="portfolio.html">Portfolio</a></p>
 		</div>
 	</div>
 
