--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -34,7 +34,7 @@
 		<div class="row">
 			<div class="col-md-4 portfolio-pic">
 				<a href="#">
-					<img class="img-responsive" src="../images/balchhall.jpg">
+					<img class="img-responsive" src="../images/thesis.png">
 				</a>
 				
 				<h3>
