--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -24,7 +24,7 @@
 	<div class="container">
 
 		<div class="col-md-12">
-				<h2>Under Construction</h2>
+				<h2>PORTFOLIO | Under Construction</h2>
 			</div>
 		</div>
 
