--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-	<div class="navbar navbar-default">
+	<div class="navbar navbar-transparent">
 		<div class="container-fluid">
 			<p class="navbar-text">Erin Carlson</p>
 			<p class="navbar-text"><a href="pages/work.html">Work</a></p>
@@ -20,7 +20,7 @@
 	</div>
 
 	<img class="blossoms" src="../cherryblossoms.jpg">
-	
+
 	<div class="container">
 
 		<p><h3>Erin graduated magna cum laude from Cornell University in 2011 with a double major in English and Spanish. She promptly surprised everyone she knew--and particularly herself--by accepting a job in an engineering capacity at MicroStrategy. Since then, her interests have grown in a more technical direction, but her penchant for spontaneous international travel, long walks in DC, and warm chocolate croissants remains unchanged.</h3></p>
