standardize nav bar

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -11,7 +11,7 @@
 <body>
 
 
-	<div class="navbar navbar-default">
+	<div class="navbar navbar-transparent">
 		<div class="container-fluid">
 			<p class="navbar-text"><a href="../index.html">Erin Carlson</a></p>
 			<p class="navbar-text"><a href="work.html">Work</a></p>
