--- a/pages/work.html
+++ b/pages/work.html
@@ -12,7 +12,7 @@
 
 
 
-	<div class="navbar navbar-default transparent">
+	<div class="navbar navbar-transparent">
 		<div class="container-fluid">
 			<p class="navbar-text"><a href="../index.html">Erin Carlson</a></p>
 			<p class="navbar-text">Work</p>
