add link to image

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -32,7 +32,7 @@
 
 
 			<div class="col-md-4 portfolio-pic">
-				<a href="#">
+				<a href="https://www.microstrategy.com/Strategy/media/downloads/white-papers/The-Platform-Approach-to-Mobile-Apps.pdf">
 					<img class="img-responsive" src="../images/ibook.png">
 				</a>
 				
