back in the day work

--- a/pages/work.html
+++ b/pages/work.html
@@ -66,7 +66,7 @@
 
 
 <div class="techAss">
-		<h1>Technology Associate</h1>
+		<h2>Technology Associate</h2>
 </div>
 	<div class="container">
 
@@ -86,21 +86,37 @@
 
 			<h2><b>Technical Support Engineer</b> | Client Experience</h2>
 				<p>Solved mission-critical customer issues via call and email in a fast-paced environment, frequently recognized as the team's top case taker.</p>
+
+
+<div class="oldWork">
+		<h2>Back in the Day</h2>
+</div>
+
+		<div class="container">
 			
-			<p><h3><b>Cornell University</b></h3></p>
-				<ul>
-					<li>International Students and Scholars Office</li>
-					<li>Office of the Vice Provost for Research</li>
-					<li>Empathy, Assistance, &amp Referral Service</li>
-				</ul>
-			<p><h3><b>City of Healdsburg</b></h3></p>
-				<ul>
-					<li>Department of Parks and Recreation</li>
-					<li>Healdsburg Pool</li>
-				</ul>
-			<p><h3><b>Metropolitan Transportation Commission</b></h3></p>
-				<ul>
-					<li>Department of Public Works at the City of Healdsburg</li>
-				</ul>		
+			<div class="col-md-4">
+				<p><h3><b>Cornell University</b></h3></p>
+					<ul>
+						<li>International Students and Scholars Office</li>
+						<li>Office of the Vice Provost for Research</li>
+						<li>Empathy, Assistance, &amp Referral Service</li>
+					</ul>
+			</div>
+
+			<div class="col-md-4">
+
+				<p><h3><b>City of Healdsburg</b></h3></p>
+					<ul>
+						<li>Department of Parks and Recreation</li>
+						<li>Healdsburg Pool</li>
+					</ul>
+			</div>
+
+			<div class="col-md-4">
+				<p><h3><b>Metropolitan Transportation Commission</b></h3></p>
+					<ul>
+						<li>Department of Public Works at the City of Healdsburg</li>
+					</ul>	
+			</div>	
 		</div>
 	</div>
