--- a/pages/work.html
+++ b/pages/work.html
@@ -86,7 +86,7 @@
 
 			<h2><b>Technical Support Engineer</b> | Client Experience</h2>
 				<p>Solved mission-critical customer issues via call and email in a fast-paced environment, frequently recognized as the team's top case taker.</p>
-
+</div>
 
 <div class="oldWork">
 		<h2>Back in the Day</h2>
