--- a/pages/work.html
+++ b/pages/work.html
@@ -86,6 +86,7 @@
 
 			<h2><b>Technical Support Engineer</b> | Client Experience</h2>
 				<p>Solved mission-critical customer issues via call and email in a fast-paced environment, frequently recognized as the team's top case taker.</p>
+		</div>
 </div>
 
 <div class="oldWork">
@@ -104,7 +105,6 @@
 			</div>
 
 			<div class="col-md-4">
-
 				<p><h3><b>City of Healdsburg</b></h3></p>
 					<ul>
 						<li>Department of Parks and Recreation</li>
@@ -118,5 +118,8 @@
 						<li>Department of Public Works at the City of Healdsburg</li>
 					</ul>	
 			</div>	
+
 		</div>
-	</div>
+
+</body>
+</html>
