--- a/pages/work.html
+++ b/pages/work.html
@@ -21,7 +21,7 @@
 		</div>
 	</div>
 
-<div class="techAss">
+<div class="oldWork">
 		<h2>MicroStrategy, Inc.</h2>
 </div>
 			
@@ -58,7 +58,7 @@
 	</div>
 
 
-<div class="techAss">
+<div class="oldWork">
 		<h2>Technology Associate</h2>
 </div>
 	<div class="container">
