back in the day and portfolio

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -25,6 +25,7 @@
 
 		<div class="col-md-12">
 				<h2>PORTFOLIO | Under Construction</h2>
+				<p>While many of my engineering-related endeavors are proprietary information, here is a sampling of some fun projects I have worked on to give you an idea of my skills.</p>
 		</div>
 
 
