--- a/pages/work.html
+++ b/pages/work.html
@@ -68,6 +68,8 @@
 		</div>
 		
 		<div class="col-md-5">
+			<p>The Technology Associate role is a rotational program where individuals spend time in Technical Support, Quality Engineering, and, ultimately, Beta Consulting. The Associate Product Manager position was an unplanned but exciting detour midway through my Quality Engineering rotation.</p>
+
 			<h3><b>Beta Consultant</b> | Beta Software Team</h3>
 				<p>Visited Fortune 500 companies to test beta software and demo new features, gathered customer feedback and reported back to stakeholders, and simultaneously led internal operational reporting projects focused customer satisfaction, performance tuning, and issue tracking.</p>
 
@@ -87,28 +89,34 @@
 </div>
 
 		<div class="container">
+
+			<p>While these jobs may no longer be strictly relevant to my day-to-day life, I wouldn't be the same person without the knowledge and skills gained over these years.</p>
 			
 			<div class="col-md-4">
 				<p><h3><b>Cornell University</b></h3></p>
 					<ul>
-						<li>International Students and Scholars Office</li>
-						<li>Office of the Vice Provost for Research</li>
-						<li>Empathy, Assistance, &amp Referral Service</li>
+						<li><b>Counselor</b> | Empathy, Assistance, &amp Referral Service</li>
+						<li><b>Instructor</b> | Empathy, Assistance, &amp Referral Service</li>
+						<li><b>Front Desk</b> | International Students and Scholars Office</li>
+						<li><b>Administrative Assistant</b> | Office of the Vice Provost for Research</li>
+						
 					</ul>
 			</div>
 
 			<div class="col-md-4">
 				<p><h3><b>City of Healdsburg</b></h3></p>
 					<ul>
-						<li>Department of Parks and Recreation</li>
-						<li>Healdsburg Pool</li>
+						<li><b>Front Desk</b> | Healdsburg Pool</li>
+						<li><b>Summer Camp Counselor</b> | Department of Parks and Recreation</li>
+						<li><b>Archivist</b> | Office of the City Clerk</li>
 					</ul>
 			</div>
 
 			<div class="col-md-4">
 				<p><h3><b>Metropolitan Transportation Commission</b></h3></p>
 					<ul>
-						<li>Department of Public Works at the City of Healdsburg</li>
+						<li><b>Transportation Intern</b> | Department of Public Works at the City of Healdsburg</li>
+						<li><b>Archivist</b> | Healdsburg City Hall</li>
 					</ul>	
 			</div>	
 
