--- a/pages/work.html
+++ b/pages/work.html
@@ -5,7 +5,8 @@
 		<title>Erin Kate Carlson</title>
 		<link href="../css/bootstrap.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/stylesheet.css" rel="stylesheet" type="text/css"/>
-	
+		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32"/>
+		<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16"/>
 	</head>
 
 <body>
@@ -68,7 +69,7 @@
 		</div>
 		
 		<div class="col-md-5">
-			<p>The Technology Associate role is a rotational program where individuals spend time in Technical Support, Quality Engineering, and, ultimately, Beta Consulting. The Associate Product Manager position was an unplanned but exciting detour midway through my Quality Engineering rotation.</p>
+			<p>The Technology Associate role is a rotational program at MicroStrategy where individuals spend time in Technical Support, Quality Engineering, and, ultimately, Beta Consulting. The Associate Product Manager position was an unplanned but exciting detour midway through my Quality Engineering rotation.</p>
 
 			<h3><b>Beta Consultant</b> | Beta Software Team</h3>
 				<p>Visited Fortune 500 companies to test beta software and demo new features, gathered customer feedback and reported back to stakeholders, and simultaneously led internal operational reporting projects focused customer satisfaction, performance tuning, and issue tracking.</p>
