--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -5,8 +5,8 @@
 		<title>Erin Kate Carlson</title>
 		<link href="../css/bootstrap.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/stylesheet.css" rel="stylesheet" type="text/css"/>
-		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32"/>
-		<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16"/>
+		<link rel="icon" type="image/png" href="../favicon-32x32.png" sizes="32x32"/>
+		<link rel="icon" type="image/png" href="../favicon-16x16.png" sizes="16x16"/>
 	</head>
 
 <body>
