--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -34,7 +34,7 @@
 
 			<div class="col-md-4 portfolio-pic">
 				<a href="#">
-					<img class="img-responsive" src="../images/MSTRDashboard.jpg">
+					<img class="img-responsive" src="../images/MSTRDashboard.png">
 				</a>
 				
 				<h3>
@@ -128,7 +128,7 @@
 				<p>Hmmm...I will definitely need to come back to this. We haven't even gotten to the good parts!</p>
 			</div>
 		
-
+		</div>
 
 	</div>		
 
