remove quotation marks

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -34,7 +34,7 @@
 
 			<div class="col-md-4 portfolio-pic">
 				<a href="#">
-					<img class="img-responsive" src="../images/MSTRDashboard.png">
+					<img class="img-responsive" src="../images/MSTRDashboard.png>
 				</a>
 				
 				<h3>
