fix quotation marks

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -34,11 +34,11 @@
 
 			<div class="col-md-4 portfolio-pic">
 				<a href="#">
-					<img class="img-responsive" src="../images/MSTRDashboard.png>
+					<img class="img-responsive" src="../images/MSTRDashboard.png">
 				</a>
 				
 				<h3>
-					<a href="#">MicroStrategy Analytics"</a>
+					<a href="#">MicroStrategy Analytics</a>
 				</h3>
 
 				<p>Over the last 4 years, I have used MicroStrategy for any number of customer use cases; however, this dashboard was personal. I need to start planning next year's vacations around the DC cherry blossoms.</p>
